# viva_api/api/spec/openapi_3_1_0_generated.yaml
@@ -1,7 +1,7 @@
 openapi: 3.1.0
 info:
   title: sms-api
-  version: 0.9.70
+  version: 0.9.81
 paths:
   /api/v1/simulations/discovery:
     get:
@@ -1191,9 +1191,9 @@ paths:
                   git_repo_url: https://github.com/CovertLabEcoli/vEcoli-private
                   git_branch: master
                   database_id: 25
-                  created_at: '2026-08-30T13:17:29.078525'
+                  created_at: '2026-09-01T10:05:44.068768'
                 parca_config:
-                  outdir: /projects/SMS/sms_api/jim/sims
+                  outdir: /projects/SMS/sms_api/prod/sims
       responses:
         '200':
           description: Successful Response
@@ -1270,6 +1270,14 @@ paths:
           type: boolean
           default: false
           title: Batch Submission
+      - name: simulator_id
+        in: query
+        required: false
+        schema:
+          anyOf:
+          - type: integer
+          - type: 'null'
+          title: Simulator Id
       - name: extra_pip_deps
         in: query
         required: false
@@ -3957,7 +3965,7 @@ components:
         parca_config:
           $ref: '#/components/schemas/ParcaOptions'
           default:
-            outdir: /projects/SMS/sms_api/jim/sims
+            outdir: /projects/SMS/sms_api/prod/sims
       additionalProperties: true
       type: object
       required:
@@ -3968,7 +3976,7 @@ components:
         outdir:
           type: string
           title: Outdir
-          default: /projects/SMS/sms_api/jim/sims
+          default: /projects/SMS/sms_api/prod/sims
       additionalProperties: true
       type: object
       title: ParcaOptions
@@ -4309,7 +4317,7 @@ components:
         last_updated:
           type: string
           title: Last Updated
-          default: '2026-08-30 13:17:29.009960'
+          default: '2026-09-01 10:05:44.004133'
         job_id:
           anyOf:
           - type: string
@@ -4351,7 +4359,7 @@ components:
         parca_options:
           $ref: '#/components/schemas/ParcaOptions'
           default:
-            outdir: /projects/SMS/sms_api/jim/sims
+            outdir: /projects/SMS/sms_api/prod/sims
         analysis_options:
           $ref: '#/components/schemas/AnalysisOptions'
           default: {}
